mutiple updates, new github workflow, more coverage.... (#280)
* improve testing

* fix maven-resources-plugin version to 3.3.1

* patch on github ations

* patch versions

* fix version

* rollback versions

* downgrade

* add condition for github workflows

* patch action

* test patch action

* edd exta test in action

* add  jacoco

* patch coverage

* patch coverage

* Support reading multiple JSON syntax blocks in a single input (#269) (#272)

Co-authored-by: QIURC <qiurongcai@huawei.com>

* change year + offset some code + fix warning

* fix warnings

* fix warnings

* add missing jsdoc

* add missing jsdoc

* spotless:apply

* add tests

* mvn spotless:apply

* add tests

* mvn spotless:apply

* add tests

* add publishing action

* update changelog

---------

Co-authored-by: Caimo <qiurc@qq.com>
Co-authored-by: QIURC <qiurongcai@huawei.com>

--- a/json-smart/pom.xml
+++ b/json-smart/pom.xml
@@ -1,5 +1,5 @@
 <!--
-Copyright 2011-2024 JSON-SMART authors
+Copyright 2011-2025 JSON-SMART authors
 
 Licensed under the Apache License, Version 2.0 (the "License");
 you may not use this file except in compliance with the License.
@@ -289,6 +289,16 @@ limitations under the License.
 					</execution>
 				</executions>
 			</plugin>
+			<plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-install-plugin</artifactId>
+        <version>3.1.4</version>
+      </plugin>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-deploy-plugin</artifactId>
+        <version>3.1.4</version>
+      </plugin>
 		</plugins>
 	</build>
 	<dependencies>
