--- a/.github/workflows/release-publish.yml
+++ b/.github/workflows/release-publish.yml
@@ -44,7 +44,8 @@ jobs:
       - name: Release accessors-smart
         run: |
           cd accessors-smart
-          ./mvnw clean deploy -P release-sign-artifacts
+          ./mvnw clean install
+          ./mvnw deploy -P release-sign-artifacts
         env:
           CENTRAL_TOKEN_USERNAME: ${{ secrets.CENTRAL_TOKEN_USERNAME }}
           CENTRAL_TOKEN_PASSWORD: ${{ secrets.CENTRAL_TOKEN_PASSWORD }}
@@ -53,7 +54,8 @@ jobs:
       - name: Release json-smart
         run: |
           cd json-smart
-          ./mvnw clean deploy -P release-sign-artifacts
+          ./mvnw clean install
+          ./mvnw deploy -P release-sign-artifacts
         env:
           CENTRAL_TOKEN_USERNAME: ${{ secrets.CENTRAL_TOKEN_USERNAME }}
           CENTRAL_TOKEN_PASSWORD: ${{ secrets.CENTRAL_TOKEN_PASSWORD }}
@@ -62,7 +64,8 @@ jobs:
       - name: Release json-smart-action
         run: |
           cd json-smart-action
-          ./mvnw clean deploy -P release-sign-artifacts
+          ./mvnw clean install
+          ./mvnw deploy -P release-sign-artifacts
         env:
           CENTRAL_TOKEN_USERNAME: ${{ secrets.CENTRAL_TOKEN_USERNAME }}
           CENTRAL_TOKEN_PASSWORD: ${{ secrets.CENTRAL_TOKEN_PASSWORD }}
