--- a/.github/workflows/release-publish.yml
+++ b/.github/workflows/release-publish.yml
@@ -41,20 +41,20 @@ jobs:
           cd ../json-smart && ./mvnw versions:set -q -DnewVersion=${{ github.event.inputs.version }} -DgenerateBackupPoms=false
           cd ../json-smart-action && ./mvnw versions:set -q -DnewVersion=${{ github.event.inputs.version }} -DgenerateBackupPoms=false
 
-      - name: Release accessors-smart
-        run: |
-          cd accessors-smart
-          ./mvnw clean install
-          ./mvnw deploy -P release-sign-artifacts
-        env:
-          CENTRAL_TOKEN_USERNAME: ${{ secrets.CENTRAL_TOKEN_USERNAME }}
-          CENTRAL_TOKEN_PASSWORD: ${{ secrets.CENTRAL_TOKEN_PASSWORD }}
-          MAVEN_GPG_PASSPHRASE: ${{ secrets.GPG_PASSPHRASE }}
+      #- name: Release accessors-smart
+      #  run: |
+      #    cd accessors-smart
+      #    ./mvnw -q clean install
+      #    ./mvnw deploy -P release-sign-artifacts
+      #  env:
+      #    CENTRAL_TOKEN_USERNAME: ${{ secrets.CENTRAL_TOKEN_USERNAME }}
+      #    CENTRAL_TOKEN_PASSWORD: ${{ secrets.CENTRAL_TOKEN_PASSWORD }}
+      #    MAVEN_GPG_PASSPHRASE: ${{ secrets.GPG_PASSPHRASE }}
 
       - name: Release json-smart
         run: |
           cd json-smart
-          ./mvnw clean install
+          ./mvnw -q clean install
           ./mvnw deploy -P release-sign-artifacts
         env:
           CENTRAL_TOKEN_USERNAME: ${{ secrets.CENTRAL_TOKEN_USERNAME }}
@@ -64,7 +64,7 @@ jobs:
       - name: Release json-smart-action
         run: |
           cd json-smart-action
-          ./mvnw clean install
+          ./mvnw -q clean install
           ./mvnw deploy -P release-sign-artifacts
         env:
           CENTRAL_TOKEN_USERNAME: ${{ secrets.CENTRAL_TOKEN_USERNAME }}
